# Newborn

./: .gitignore  README.md  buildkit.json
source/application/: CMakeLists.txt  NewbornApplication.cpp  NewbornApplication.hpp  NewbornApplicationController.hpp  NewbornDesktopService_pc_steam.cpp  NewbornDesktopService_pc_steam.hpp  NewbornMainApplication.hpp  NewbornMainApplication_sdl.cpp  NewbornP2PNetworkingService_pc.cpp  NewbornP2PNetworkingService_pc.hpp  NewbornPlatformServices_pc.cpp  NewbornPlatformServices_pc.hpp  NewbornRenderer.cpp  NewbornRenderer.hpp  NewbornRenderer_opengl.cpp  NewbornRenderer_opengl.hpp  NewbornStatisticsService_pc_steam.cpp  NewbornStatisticsService_pc_steam.hpp  NewbornTextureAtlas.hpp  NewbornUserGeneratedContentService_pc_steam.cpp  NewbornUserGeneratedContentService_pc_steam.hpp
source/base/: CMakeLists.txt  NewbornAnimatedPartSet.cpp  NewbornAnimatedPartSet.hpp  NewbornAssetSource.hpp  NewbornAssets.cpp  NewbornAssets.hpp  NewbornBlockAlongLine.hpp  NewbornBlocksAlongLine.hpp  NewbornCellularLightArray.cpp  NewbornCellularLightArray.hpp  NewbornCellularLighting.cpp  NewbornCellularLighting.hpp  NewbornCellularLiquid.hpp  NewbornConfiguration.cpp  NewbornConfiguration.hpp  NewbornDirectoryAssetSource.cpp  NewbornDirectoryAssetSource.hpp  NewbornMemoryAssetSource.cpp  NewbornMemoryAssetSource.hpp  NewbornMixer.cpp  NewbornMixer.hpp  NewbornPackedAssetSource.cpp  NewbornPackedAssetSource.hpp  NewbornRootBase.cpp  NewbornRootBase.hpp  NewbornVersion.cpp.in  NewbornVersion.hpp  NewbornVersionOptionParser.cpp  NewbornVersionOptionParser.hpp  NewbornWorldGeometry.cpp  NewbornWorldGeometry.hpp
source/client/: CMakeLists.txt  NewbornClientApplication.cpp  NewbornClientApplication.hpp  NewbornRenderingLuaBindings.cpp  NewbornRenderingLuaBindings.hpp  newborn.rc  resource.h  starbound.rc
source/core/: CMakeLists.txt  NewbornAStar.hpp  NewbornAlgorithm.hpp  NewbornArray.hpp  NewbornAssetPath.cpp  NewbornAssetPath.hpp  NewbornAtomicSharedPtr.hpp  NewbornAudio.cpp  NewbornAudio.hpp  NewbornBTree.hpp  NewbornBTreeDatabase.cpp  NewbornBTreeDatabase.hpp  NewbornBiMap.hpp  NewbornBlockAllocator.hpp  NewbornBuffer.cpp  NewbornBuffer.hpp  NewbornByteArray.cpp  NewbornByteArray.hpp  NewbornBytes.hpp  NewbornCasting.hpp  NewbornColor.cpp  NewbornColor.hpp  NewbornCompression.cpp  NewbornCompression.hpp  NewbornConfig.hpp  NewbornCurve25519.cpp  NewbornCurve25519.hpp  NewbornDataStream.cpp  NewbornDataStream.hpp  NewbornDataStreamDevices.cpp  NewbornDataStreamDevices.hpp  NewbornDataStreamExtra.hpp  NewbornDirectives.cpp  NewbornDirectives.hpp  NewbornDynamicLib.hpp  NewbornDynamicLib_unix.cpp  NewbornDynamicLib_windows.cpp  NewbornEither.hpp  NewbornEncode.cpp  NewbornEncode.hpp  (+170 more)
source/frontend/: CMakeLists.txt  NewbornActionBar.cpp  NewbornActionBar.hpp  NewbornAiInterface.cpp  NewbornAiInterface.hpp  NewbornBaseScriptPane.cpp  NewbornBaseScriptPane.hpp  NewbornBindingsMenu.cpp  NewbornBindingsMenu.hpp  NewbornBookmarkInterface.cpp  NewbornBookmarkInterface.hpp  NewbornCharCreation.cpp  NewbornCharCreation.hpp  NewbornCharSelection.cpp  NewbornCharSelection.hpp  NewbornChat.cpp  NewbornChat.hpp  NewbornChatBubbleManager.cpp  NewbornChatBubbleManager.hpp  NewbornChatBubbleSeparation.cpp  NewbornChatBubbleSeparation.hpp  NewbornCinematic.cpp  NewbornCinematic.hpp  NewbornClientCommandProcessor.cpp  NewbornClientCommandProcessor.hpp  NewbornClipboardLuaBindings.cpp  NewbornClipboardLuaBindings.hpp  NewbornCodexInterface.cpp  NewbornCodexInterface.hpp  NewbornConfirmationDialog.cpp  NewbornConfirmationDialog.hpp  NewbornContainerInteractor.cpp  NewbornContainerInteractor.hpp  NewbornContainerInterface.cpp  NewbornContainerInterface.hpp  NewbornCraftingInterface.cpp  NewbornCraftingInterface.hpp  NewbornErrorScreen.cpp  NewbornErrorScreen.hpp  NewbornGraphicsMenu.cpp  (+61 more)
source/game/: CMakeLists.txt  NewbornActorMovementController.cpp  NewbornActorMovementController.hpp  NewbornAiDatabase.cpp  NewbornAiDatabase.hpp  NewbornAiTypes.cpp  NewbornAiTypes.hpp  NewbornAmbient.cpp  NewbornAmbient.hpp  NewbornAnimation.cpp  NewbornAnimation.hpp  NewbornArmorWearer.cpp  NewbornArmorWearer.hpp  NewbornBehaviorDatabase.cpp  NewbornBehaviorDatabase.hpp  NewbornBehaviorState.cpp  NewbornBehaviorState.hpp  NewbornBiome.cpp  NewbornBiome.hpp  NewbornBiomeDatabase.cpp  NewbornBiomeDatabase.hpp  NewbornBiomePlacement.cpp  NewbornBiomePlacement.hpp  NewbornCelestialCoordinate.cpp  NewbornCelestialCoordinate.hpp  NewbornCelestialDatabase.cpp  NewbornCelestialDatabase.hpp  NewbornCelestialGraphics.cpp  NewbornCelestialGraphics.hpp  NewbornCelestialParameters.cpp  NewbornCelestialParameters.hpp  NewbornCelestialTypes.cpp  NewbornCelestialTypes.hpp  NewbornChatAction.cpp  NewbornChatAction.hpp  NewbornChatProcessor.cpp  NewbornChatProcessor.hpp  NewbornChatTypes.cpp  NewbornChatTypes.hpp  NewbornClientContext.cpp  (+295 more)
source/json_tool/: CMakeLists.txt  editor_gui.cpp  editor_gui.hpp  json_tool.cpp  json_tool.hpp
source/mod_uploader/: CMakeLists.txt  NewbornModUploader.cpp  NewbornModUploader.hpp  NewbornSPlainTextEdit.cpp  NewbornSPlainTextEdit.hpp  NewbornStringConversion.hpp  main.cpp
source/rendering/: CMakeLists.txt  NewbornAnchorTypes.cpp  NewbornAnchorTypes.hpp  NewbornAssetTextureGroup.cpp  NewbornAssetTextureGroup.hpp  NewbornDrawablePainter.cpp  NewbornDrawablePainter.hpp  NewbornEnvironmentPainter.cpp  NewbornEnvironmentPainter.hpp  NewbornFontTextureGroup.cpp  NewbornFontTextureGroup.hpp  NewbornTextPainter.cpp  NewbornTextPainter.hpp  NewbornTilePainter.cpp  NewbornTilePainter.hpp  NewbornWorldCamera.cpp  NewbornWorldCamera.hpp  NewbornWorldPainter.cpp  NewbornWorldPainter.hpp
source/server/: CMakeLists.txt  NewbornServerQueryThread.cpp  NewbornServerQueryThread.hpp  NewbornServerRconClient.cpp  NewbornServerRconClient.hpp  NewbornServerRconThread.cpp  NewbornServerRconThread.hpp  main.cpp  newborn_server.rc
source/test/: CMakeCache.txt  CMakeLists.txt  NewbornTestUniverse.cpp  NewbornTestUniverse.hpp  algorithm_test.cpp  assets_test.cpp  block_allocator_test.cpp  (+49 more)
(+284 files in other folders)
