INCLUDE_DIRECTORIES (
    ${NEWBORN_EXTERN_INCLUDES}
    ${NEWBORN_CORE_INCLUDES}
    ${NEWBORN_BASE_INCLUDES}
    ${NEWBORN_GAME_INCLUDES}
    ${NEWBORN_PLATFORM_INCLUDES}
    ${NEWBORN_APPLICATION_INCLUDES}
    ${NEWBORN_RENDERING_INCLUDES}
    ${NEWBORN_WINDOWING_INCLUDES}
    ${NEWBORN_FRONTEND_INCLUDES}
  )

SET (newborn_frontend_HEADERS
    NewbornActionBar.hpp
    NewbornAiInterface.hpp
    NewbornBaseScriptPane.hpp
    NewbornBindingsMenu.hpp
    NewbornBookmarkInterface.hpp
    NewbornChat.hpp
    NewbornCharCreation.hpp
    NewbornCharSelection.hpp
    NewbornChatBubbleSeparation.hpp
    NewbornChatBubbleManager.hpp
    NewbornCinematic.hpp
    NewbornClientCommandProcessor.hpp
    NewbornClipboardLuaBindings.hpp
    NewbornCodexInterface.hpp
    NewbornConfirmationDialog.hpp
    NewbornContainerInterface.hpp
    NewbornContainerInteractor.hpp
    NewbornCraftingInterface.hpp
    NewbornErrorScreen.hpp
    NewbornGraphicsMenu.hpp
    NewbornInventory.hpp
    NewbornInterfaceCursor.hpp
    NewbornInterfaceLuaBindings.hpp
    NewbornItemTooltip.hpp
    NewbornJoinRequestDialog.hpp
    NewbornKeybindingsMenu.hpp
    NewbornMainInterface.hpp
    NewbornMainInterfaceTypes.hpp
    NewbornMainMixer.hpp
    NewbornMerchantInterface.hpp
    NewbornModsMenu.hpp
    NewbornNameplatePainter.hpp
    NewbornOptionsMenu.hpp
    NewbornPopupInterface.hpp
    NewbornQuestIndicatorPainter.hpp
    NewbornQuestInterface.hpp
    NewbornQuestTracker.hpp
    NewbornRadioMessagePopup.hpp
    NewbornTeamBar.hpp
    NewbornTitleScreen.hpp
    NewbornScriptPane.hpp
    NewbornSimpleTooltip.hpp
    NewbornSongbookInterface.hpp
    NewbornStatusPane.hpp
    NewbornTeleportDialog.hpp
    NewbornVoice.hpp
    NewbornVoiceLuaBindings.hpp
    NewbornVoiceSettingsMenu.hpp
    NewbornWireInterface.hpp
  )

SET (newborn_frontend_SOURCES
    NewbornActionBar.cpp
    NewbornAiInterface.cpp
    NewbornBaseScriptPane.cpp
    NewbornBindingsMenu.cpp
    NewbornBookmarkInterface.cpp
    NewbornChat.cpp
    NewbornCharCreation.cpp
    NewbornCharSelection.cpp
    NewbornChatBubbleSeparation.cpp
    NewbornChatBubbleManager.cpp
    NewbornCinematic.cpp
    NewbornClientCommandProcessor.cpp
    NewbornClipboardLuaBindings.cpp
    NewbornCodexInterface.cpp
    NewbornConfirmationDialog.cpp
    NewbornContainerInterface.cpp
    NewbornContainerInteractor.cpp
    NewbornCraftingInterface.cpp
    NewbornErrorScreen.cpp
    NewbornGraphicsMenu.cpp
    NewbornInventory.cpp
    NewbornInterfaceCursor.cpp
    NewbornInterfaceLuaBindings.cpp
    NewbornItemTooltip.cpp
    NewbornJoinRequestDialog.cpp
    NewbornKeybindingsMenu.cpp
    NewbornMainInterface.cpp
    NewbornMainInterfaceTypes.cpp
    NewbornMainMixer.cpp
    NewbornMerchantInterface.cpp
    NewbornModsMenu.cpp
    NewbornNameplatePainter.cpp
    NewbornOptionsMenu.cpp
    NewbornPopupInterface.cpp
    NewbornQuestIndicatorPainter.cpp
    NewbornQuestInterface.cpp
    NewbornQuestTracker.cpp
    NewbornRadioMessagePopup.cpp
    NewbornTeamBar.cpp
    NewbornTitleScreen.cpp
    NewbornScriptPane.cpp
    NewbornSimpleTooltip.cpp
    NewbornSongbookInterface.cpp
    NewbornStatusPane.cpp
    NewbornTeleportDialog.cpp
    NewbornVoice.cpp
    NewbornVoiceLuaBindings.cpp
    NewbornVoiceSettingsMenu.cpp
    NewbornWireInterface.cpp
  )

ADD_LIBRARY (newborn_frontend OBJECT ${newborn_frontend_SOURCES} ${newborn_frontend_HEADERS})

IF(NEWBORN_PRECOMPILED_HEADERS)
  TARGET_PRECOMPILE_HEADERS (newborn_frontend REUSE_FROM newborn_core)
ENDIF()