INCLUDE_DIRECTORIES (
    ${NEWBORN_EXTERN_INCLUDES}
    ${NEWBORN_CORE_INCLUDES}
    ${NEWBORN_BASE_INCLUDES}
    ${NEWBORN_GAME_INCLUDES}
  )

ADD_LIBRARY (newborn_game OBJECT ${newborn_game_SOURCES} ${newborn_game_HEADERS})

IF(NEWBORN_PRECOMPILED_HEADERS)
    TARGET_PRECOMPILE_HEADERS (newborn_game REUSE_FROM newborn_core)
ENDIF()