INCLUDE_DIRECTORIES (
    ${NEWBORN_EXTERN_INCLUDES}
    ${NEWBORN_CORE_INCLUDES}
    ${NEWBORN_BASE_INCLUDES}
    ${NEWBORN_PLATFORM_INCLUDES}
    ${NEWBORN_GAME_INCLUDES}
  )

SET (newborn_game_HEADERS
    NewbornActorMovementController.hpp
    NewbornAiDatabase.hpp
    NewbornAiTypes.hpp
    NewbornAmbient.hpp
    NewbornAnimation.hpp
    NewbornArmorWearer.hpp
    NewbornBehaviorDatabase.hpp
    NewbornBehaviorState.hpp
    NewbornBiome.hpp
    NewbornBiomeDatabase.hpp
    NewbornBiomePlacement.hpp
    NewbornCelestialCoordinate.hpp
    NewbornCelestialDatabase.hpp
    NewbornCelestialGraphics.hpp
    NewbornCelestialParameters.hpp
    NewbornCelestialTypes.hpp
    NewbornChatAction.hpp
    NewbornChatProcessor.hpp
    NewbornChatTypes.hpp
    NewbornClientContext.hpp
    NewbornCodex.hpp
    NewbornCodexDatabase.hpp
    NewbornCollectionDatabase.hpp
    NewbornCollisionBlock.hpp
    NewbornCollisionGenerator.hpp
    NewbornCommandProcessor.hpp
    NewbornDamage.hpp
    NewbornDamageDatabase.hpp
    NewbornDamageManager.hpp
    NewbornDamageTypes.hpp
    NewbornDanceDatabase.hpp
    NewbornDrawable.hpp
    NewbornDungeonGenerator.hpp
    NewbornDungeonImagePart.hpp
    NewbornDungeonTMXPart.hpp
    NewbornEffectEmitter.hpp
    NewbornEffectSourceDatabase.hpp
    NewbornEmoteProcessor.hpp
    NewbornEntityFactory.hpp
    NewbornEntityMap.hpp
    NewbornEntityRendering.hpp
    NewbornEntityRenderingTypes.hpp
    NewbornEntitySplash.hpp
    NewbornFallingBlocksAgent.hpp
    NewbornForceRegions.hpp
    NewbornGameTimers.hpp
    NewbornGameTypes.hpp
    NewbornHumanoid.hpp
    NewbornImageMetadataDatabase.hpp
    NewbornInput.hpp
    NewbornInteractionTypes.hpp
    NewbornInterpolationTracker.hpp
    NewbornInventoryTypes.hpp
    NewbornItem.hpp
    NewbornItemBag.hpp
    NewbornItemDatabase.hpp
    NewbornItemDescriptor.hpp
    NewbornItemDrop.hpp
    NewbornItemRecipe.hpp
    NewbornLightSource.hpp
    NewbornLiquidsDatabase.hpp
    NewbornLiquidTypes.hpp
    NewbornMaterialDatabase.hpp
    NewbornMaterialRenderProfile.hpp
    NewbornMaterialTypes.hpp
    NewbornMicroDungeon.hpp
    NewbornMonster.hpp
    NewbornMonsterDatabase.hpp
    NewbornMovementController.hpp
    NewbornNameGenerator.hpp
    NewbornNetPackets.hpp
    NewbornNetPacketSocket.hpp
    NewbornNetworkedAnimator.hpp
    NewbornNpc.hpp
    NewbornNpcDatabase.hpp
    NewbornObject.hpp
    NewbornObjectDatabase.hpp
    NewbornParallax.hpp
    NewbornParticle.hpp
    NewbornParticleDatabase.hpp
    NewbornParticleManager.hpp
    NewbornPlant.hpp
    NewbornPlantDatabase.hpp
    NewbornPlantDrop.hpp
    NewbornPlatformerAStar.hpp
    NewbornPlatformerAStarTypes.hpp
    NewbornPlayer.hpp
    NewbornPlayerBlueprints.hpp
    NewbornPlayerCodexes.hpp
    NewbornPlayerCompanions.hpp
    NewbornPlayerDeployment.hpp
    NewbornPlayerFactory.hpp
    NewbornPlayerInventory.hpp
    NewbornPlayerLog.hpp
    NewbornPlayerStorage.hpp
    NewbornPlayerTech.hpp
    NewbornPlayerTypes.hpp
    NewbornPlayerUniverseMap.hpp
    NewbornProjectile.hpp
    NewbornProjectileDatabase.hpp
    NewbornQuestDescriptor.hpp
    NewbornQuestManager.hpp
    NewbornQuests.hpp
    NewbornQuestTemplateDatabase.hpp
    NewbornRadioMessageDatabase.hpp
    NewbornRoot.hpp
    NewbornRootLoader.hpp
    NewbornServerClientContext.hpp
    NewbornSky.hpp
    NewbornSkyParameters.hpp
    NewbornSkyRenderData.hpp
    NewbornSkyTypes.hpp
    NewbornSongbook.hpp
    NewbornSpawner.hpp
    NewbornSpawnTypeDatabase.hpp
    NewbornSpeciesDatabase.hpp
    NewbornStagehand.hpp
    NewbornStagehandDatabase.hpp
    NewbornStatCollection.hpp
    NewbornStatistics.hpp
    NewbornStatisticsDatabase.hpp
    NewbornStatSet.hpp
    NewbornStatusController.hpp
    NewbornStatusEffectDatabase.hpp
    NewbornStatusTypes.hpp
    NewbornStoredFunctions.hpp
    NewbornSystemWorld.hpp
    NewbornSystemWorldClient.hpp
    NewbornSystemWorldServer.hpp
    NewbornSystemWorldServerThread.hpp
    NewbornTeamClient.hpp
    NewbornTeamManager.hpp
    NewbornTechController.hpp
    NewbornTechDatabase.hpp
    NewbornTenantDatabase.hpp
    NewbornTerrainDatabase.hpp
    NewbornTileDamage.hpp
    NewbornTileDrawer.hpp
    NewbornTileModification.hpp
    NewbornTileSectorArray.hpp
    NewbornTilesetDatabase.hpp
    NewbornToolUser.hpp
    NewbornTreasure.hpp
    NewbornUniverseClient.hpp
    NewbornUniverseConnection.hpp
    NewbornUniverseServer.hpp
    NewbornUniverseSettings.hpp
    NewbornVehicle.hpp
    NewbornVehicleDatabase.hpp
    NewbornVersioningDatabase.hpp
    NewbornWarping.hpp
    NewbornWeather.hpp
    NewbornWeatherTypes.hpp
    NewbornWireProcessor.hpp
    NewbornWiring.hpp
    NewbornWorldClient.hpp
    NewbornWorldClientState.hpp
    NewbornWorldGeneration.hpp
    NewbornWorldImpl.hpp
    NewbornWorldLayout.hpp
    NewbornWorldParameters.hpp
    NewbornWorldRenderData.hpp
    NewbornWorldServer.hpp
    NewbornWorldServerThread.hpp
    NewbornWorldStorage.hpp
    NewbornWorldStructure.hpp
    NewbornWorldTemplate.hpp
    NewbornWorldTiles.hpp

    interfaces/NewbornAnchorableEntity.hpp
    interfaces/NewbornActivatableItem.hpp
    interfaces/NewbornAggressiveEntity.hpp
    interfaces/NewbornBeamItem.hpp
    interfaces/NewbornChattyEntity.hpp
    interfaces/NewbornContainerEntity.hpp
    interfaces/NewbornDamageBarEntity.hpp
    interfaces/NewbornDurabilityItem.hpp
    interfaces/NewbornEffectSourceItem.hpp
    interfaces/NewbornEmoteEntity.hpp
    interfaces/NewbornEntity.hpp
    interfaces/NewbornFireableItem.hpp
    interfaces/NewbornInteractiveEntity.hpp
    interfaces/NewbornLoungingEntities.hpp
    interfaces/NewbornNametagEntity.hpp
    interfaces/NewbornNonRotatedDrawablesItem.hpp
    interfaces/NewbornPhysicsEntity.hpp
    interfaces/NewbornPreviewTileTool.hpp
    interfaces/NewbornPointableItem.hpp
    interfaces/NewbornPortraitEntity.hpp
    interfaces/NewbornPreviewableItem.hpp
    interfaces/NewbornRenderableItem.hpp
    interfaces/NewbornScriptedEntity.hpp
    interfaces/NewbornStatusEffectEntity.hpp
    interfaces/NewbornStatusEffectItem.hpp
    interfaces/NewbornSwingableItem.hpp
    interfaces/NewbornTileEntity.hpp
    interfaces/NewbornToolUserEntity.hpp
    interfaces/NewbornToolUserItem.hpp
    interfaces/NewbornWarpTargetEntity.hpp
    interfaces/NewbornWireEntity.hpp
    interfaces/NewbornWorld.hpp

    items/NewbornActiveItem.hpp
    items/NewbornArmors.hpp
    items/NewbornAugmentItem.hpp
    items/NewbornBlueprintItem.hpp
    items/NewbornCodexItem.hpp
    items/NewbornCurrency.hpp
    items/NewbornConsumableItem.hpp
    items/NewbornInspectionTool.hpp
    items/NewbornInstrumentItem.hpp
    items/NewbornLiquidItem.hpp
    items/NewbornMaterialItem.hpp
    items/NewbornObjectItem.hpp
    items/NewbornThrownItem.hpp
    items/NewbornTools.hpp
    items/NewbornUnlockItem.hpp

    objects/NewbornContainerObject.hpp
    objects/NewbornFarmableObject.hpp
    objects/NewbornLoungeableObject.hpp
    objects/NewbornPhysicsObject.hpp
    objects/NewbornTeleporterObject.hpp

    scripting/NewbornCelestialLuaBindings.hpp
    scripting/NewbornBehaviorLuaBindings.hpp
    scripting/NewbornConfigLuaBindings.hpp
    scripting/NewbornEntityLuaBindings.hpp
    scripting/NewbornFireableItemLuaBindings.hpp
    scripting/NewbornInputLuaBindings.hpp
    scripting/NewbornItemLuaBindings.hpp
    scripting/NewbornLuaActorMovementComponent.hpp
    scripting/NewbornLuaAnimationComponent.hpp
    scripting/NewbornLuaGameConverters.hpp
    scripting/NewbornLuaComponents.hpp
    scripting/NewbornLuaRoot.hpp
    scripting/NewbornMovementControllerLuaBindings.hpp
    scripting/NewbornNetworkedAnimatorLuaBindings.hpp
    scripting/NewbornPlayerLuaBindings.hpp
    scripting/NewbornRootLuaBindings.hpp
    scripting/NewbornScriptedAnimatorLuaBindings.hpp
    scripting/NewbornStatusControllerLuaBindings.hpp
    scripting/NewbornWorldLuaBindings.hpp
    scripting/NewbornUniverseServerLuaBindings.hpp

    terrain/NewbornCacheSelector.hpp
    terrain/NewbornConstantSelector.hpp
    terrain/NewbornDisplacementSelector.hpp
    terrain/NewbornFlatSurfaceSelector.hpp
    terrain/NewbornIslandSurfaceSelector.hpp
    terrain/NewbornKarstCave.hpp
    terrain/NewbornMaxSelector.hpp
    terrain/NewbornMinMaxSelector.hpp
    terrain/NewbornMixSelector.hpp
    terrain/NewbornPerlinSelector.hpp
    terrain/NewbornRidgeBlocksSelector.hpp
    terrain/NewbornRotateSelector.hpp
    terrain/NewbornWormCave.hpp
  )

SET (newborn_game_SOURCES
    NewbornActorMovementController.cpp
    NewbornAiDatabase.cpp
    NewbornAiTypes.cpp
    NewbornAmbient.cpp
    NewbornAnimation.cpp
    NewbornArmorWearer.cpp
    NewbornBehaviorDatabase.cpp
    NewbornBehaviorState.cpp
    NewbornBiome.cpp
    NewbornBiomeDatabase.cpp
    NewbornBiomePlacement.cpp
    NewbornCelestialCoordinate.cpp
    NewbornCelestialDatabase.cpp
    NewbornCelestialGraphics.cpp
    NewbornCelestialParameters.cpp
    NewbornCelestialTypes.cpp
    NewbornChatAction.cpp
    NewbornChatProcessor.cpp
    NewbornChatTypes.cpp
    NewbornClientContext.cpp
    NewbornCodex.cpp
    NewbornCodexDatabase.cpp
    NewbornCollectionDatabase.cpp
    NewbornCollisionBlock.cpp
    NewbornCollisionGenerator.cpp
    NewbornCommandProcessor.cpp
    NewbornDamage.cpp
    NewbornDamageDatabase.cpp
    NewbornDamageManager.cpp
    NewbornDamageTypes.cpp
    NewbornDanceDatabase.cpp
    NewbornDrawable.cpp
    NewbornDungeonGenerator.cpp
    NewbornDungeonImagePart.cpp
    NewbornDungeonTMXPart.cpp
    NewbornEffectEmitter.cpp
    NewbornEffectSourceDatabase.cpp
    NewbornEmoteProcessor.cpp
    NewbornEntityFactory.cpp
    NewbornEntityMap.cpp
    NewbornEntityRendering.cpp
    NewbornEntityRenderingTypes.cpp
    NewbornEntitySplash.cpp
    NewbornFallingBlocksAgent.cpp
    NewbornForceRegions.cpp
    NewbornGameTimers.cpp
    NewbornGameTypes.cpp
    NewbornHumanoid.cpp
    NewbornImageMetadataDatabase.cpp
    NewbornInput.cpp
    NewbornInteractionTypes.cpp
    NewbornInterpolationTracker.cpp
    NewbornInventoryTypes.cpp
    NewbornItem.cpp
    NewbornItemBag.cpp
    NewbornItemDatabase.cpp
    NewbornItemDescriptor.cpp
    NewbornItemDrop.cpp
    NewbornItemRecipe.cpp
    NewbornLightSource.cpp
    NewbornLiquidsDatabase.cpp
    NewbornLiquidTypes.cpp
    NewbornMaterialDatabase.cpp
    NewbornMaterialRenderProfile.cpp
    NewbornMicroDungeon.cpp
    NewbornMonster.cpp
    NewbornMonsterDatabase.cpp
    NewbornMovementController.cpp
    NewbornNameGenerator.cpp
    NewbornNetPackets.cpp
    NewbornNetPacketSocket.cpp
    NewbornNetworkedAnimator.cpp
    NewbornNpc.cpp
    NewbornNpcDatabase.cpp
    NewbornObject.cpp
    NewbornObjectDatabase.cpp
    NewbornParallax.cpp
    NewbornParticle.cpp
    NewbornParticleDatabase.cpp
    NewbornParticleManager.cpp
    NewbornPlant.cpp
    NewbornPlantDatabase.cpp
    NewbornPlantDrop.cpp
    NewbornPlatformerAStar.cpp
    NewbornPlatformerAStarTypes.cpp
    NewbornPlayer.cpp
    NewbornPlayerBlueprints.cpp
    NewbornPlayerCodexes.cpp
    NewbornPlayerCompanions.cpp
    NewbornPlayerDeployment.cpp
    NewbornPlayerFactory.cpp
    NewbornPlayerInventory.cpp
    NewbornPlayerLog.cpp
    NewbornPlayerStorage.cpp
    NewbornPlayerTech.cpp
    NewbornPlayerTypes.cpp
    NewbornPlayerUniverseMap.cpp
    NewbornProjectile.cpp
    NewbornProjectileDatabase.cpp
    NewbornQuestDescriptor.cpp
    NewbornQuestManager.cpp
    NewbornQuests.cpp
    NewbornQuestTemplateDatabase.cpp
    NewbornRadioMessageDatabase.cpp
    NewbornRoot.cpp
    NewbornRootLoader.cpp
    NewbornServerClientContext.cpp
    NewbornSky.cpp
    NewbornSkyParameters.cpp
    NewbornSkyRenderData.cpp
    NewbornSkyTypes.cpp
    NewbornSongbook.cpp
    NewbornSpawner.cpp
    NewbornSpawnTypeDatabase.cpp
    NewbornSpeciesDatabase.cpp
    NewbornStagehand.cpp
    NewbornStagehandDatabase.cpp
    NewbornStatCollection.cpp
    NewbornStatistics.cpp
    NewbornStatisticsDatabase.cpp
    NewbornStatSet.cpp
    NewbornStatusController.cpp
    NewbornStatusEffectDatabase.cpp
    NewbornStatusTypes.cpp
    NewbornStoredFunctions.cpp
    NewbornSystemWorld.cpp
    NewbornSystemWorldClient.cpp
    NewbornSystemWorldServer.cpp
    NewbornSystemWorldServerThread.cpp
    NewbornTeamClient.cpp
    NewbornTeamManager.cpp
    NewbornTechController.cpp
    NewbornTechDatabase.cpp
    NewbornTenantDatabase.cpp
    NewbornTerrainDatabase.cpp
    NewbornTileDamage.cpp
    NewbornTileDrawer.cpp
    NewbornTileModification.cpp
    NewbornTilesetDatabase.cpp
    NewbornToolUser.cpp
    NewbornTreasure.cpp
    NewbornUniverseClient.cpp
    NewbornUniverseConnection.cpp
    NewbornUniverseServer.cpp
    NewbornUniverseSettings.cpp
    NewbornVehicle.cpp
    NewbornVehicleDatabase.cpp
    NewbornVersioningDatabase.cpp
    NewbornWarping.cpp
    NewbornWeather.cpp
    NewbornWeatherTypes.cpp
    NewbornWireProcessor.cpp
    NewbornWiring.cpp
    NewbornWorldClient.cpp
    NewbornWorldClientState.cpp
    NewbornWorldGeneration.cpp
    NewbornWorldLayout.cpp
    NewbornWorldParameters.cpp
    NewbornWorldServer.cpp
    NewbornWorldServerThread.cpp
    NewbornWorldStorage.cpp
    NewbornWorldStructure.cpp
    NewbornWorldTemplate.cpp
    NewbornWorldTiles.cpp

    interfaces/NewbornAnchorableEntity.cpp
    interfaces/NewbornBeamItem.cpp
    interfaces/NewbornContainerEntity.cpp
    interfaces/NewbornDamageBarEntity.cpp
    interfaces/NewbornEntity.cpp
    interfaces/NewbornFireableItem.cpp
    interfaces/NewbornInteractiveEntity.cpp
    interfaces/NewbornLoungingEntities.cpp
    interfaces/NewbornPhysicsEntity.cpp
    interfaces/NewbornPointableItem.cpp
    interfaces/NewbornSwingableItem.cpp
    interfaces/NewbornTileEntity.cpp
    interfaces/NewbornToolUserItem.cpp
    interfaces/NewbornWorld.cpp

    items/NewbornActiveItem.cpp
    items/NewbornArmors.cpp
    items/NewbornAugmentItem.cpp
    items/NewbornBlueprintItem.cpp
    items/NewbornCodexItem.cpp
    items/NewbornCurrency.cpp
    items/NewbornConsumableItem.cpp
    items/NewbornInspectionTool.cpp
    items/NewbornInstrumentItem.cpp
    items/NewbornLiquidItem.cpp
    items/NewbornMaterialItem.cpp
    items/NewbornObjectItem.cpp
    items/NewbornThrownItem.cpp
    items/NewbornTools.cpp
    items/NewbornUnlockItem.cpp

    objects/NewbornContainerObject.cpp
    objects/NewbornFarmableObject.cpp
    objects/NewbornLoungeableObject.cpp
    objects/NewbornPhysicsObject.cpp
    objects/NewbornTeleporterObject.cpp

    scripting/NewbornCelestialLuaBindings.cpp
    scripting/NewbornBehaviorLuaBindings.cpp
    scripting/NewbornConfigLuaBindings.cpp
    scripting/NewbornEntityLuaBindings.cpp
    scripting/NewbornFireableItemLuaBindings.cpp
    scripting/NewbornInputLuaBindings.cpp
    scripting/NewbornItemLuaBindings.cpp
    scripting/NewbornLuaComponents.cpp
    scripting/NewbornLuaGameConverters.cpp
    scripting/NewbornLuaRoot.cpp
    scripting/NewbornMovementControllerLuaBindings.cpp
    scripting/NewbornNetworkedAnimatorLuaBindings.cpp
    scripting/NewbornPlayerLuaBindings.cpp
    scripting/NewbornRootLuaBindings.cpp
    scripting/NewbornScriptedAnimatorLuaBindings.cpp
    scripting/NewbornStatusControllerLuaBindings.cpp
    scripting/NewbornWorldLuaBindings.cpp
    scripting/NewbornUniverseServerLuaBindings.cpp

    terrain/NewbornCacheSelector.cpp
    terrain/NewbornConstantSelector.cpp
    terrain/NewbornDisplacementSelector.cpp
    terrain/NewbornFlatSurfaceSelector.cpp
    terrain/NewbornIslandSurfaceSelector.cpp
    terrain/NewbornKarstCave.cpp
    terrain/NewbornMaxSelector.cpp
    terrain/NewbornMinMaxSelector.cpp
    terrain/NewbornMixSelector.cpp
    terrain/NewbornPerlinSelector.cpp
    terrain/NewbornRidgeBlocksSelector.cpp
    terrain/NewbornRotateSelector.cpp
    terrain/NewbornWormCave.cpp
  )

ADD_LIBRARY (newborn_game OBJECT ${newborn_game_SOURCES} ${newborn_game_HEADERS})

IF(NEWBORN_PRECOMPILED_HEADERS)
  TARGET_PRECOMPILE_HEADERS (newborn_game REUSE_FROM newborn_core)
ENDIF()