INCLUDE_DIRECTORIES (
    ${NEWBORN_EXTERN_INCLUDES}
    ${NEWBORN_CORE_INCLUDES}
  )

FIND_PACKAGE (Qt5Core)
FIND_PACKAGE (Qt5Widgets)

SET (CMAKE_INCLUDE_CURRENT_DIR ON)
SET (CMAKE_AUTOMOC ON)

ADD_EXECUTABLE (json_tool WIN32
  $<TARGET_OBJECTS:newborn_extern> $<TARGET_OBJECTS:newborn_core>
  json_tool.cpp editor_gui.cpp)
TARGET_LINK_LIBRARIES (json_tool ${NEWBORN_EXT_LIBS})

SET (CMAKE_AUTOMOC OFF)
SET (CMAKE_INCLUDE_CURRENT_DIR OFF)
